--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
+		languageVersion = JavaLanguageVersion.of(17)
 	}
 }
 
@@ -18,6 +18,18 @@ repositories {
 }
 
 dependencies {
+	implementation 'com.google.api-client:google-api-client:2.0.0'
+	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+	implementation 'com.google.apis:google-api-services-calendar:v3-rev20220715-2.0.0'
+	implementation 'com.google.http-client:google-http-client-jackson2:1.39.2'
+	implementation 'com.slack.api:bolt:1.39.0'
+	implementation 'com.slack.api:bolt-servlet:1.39.0'
+	implementation 'com.slack.api:bolt-jetty:1.39.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compileOnly 'org.projectlombok:lombok:1.18.28'
+	annotationProcessor 'org.projectlombok:lombok:1.18.28'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -26,3 +38,21 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+//apply plugin: 'java'
+//apply plugin: 'application'
+//
+//mainClassName = 'CalendarQuickstart'
+//sourceCompatibility = 11
+//targetCompatibility = 11
+//version = '1.0'
+//
+//repositories {
+//	mavenCentral()
+//}
+//
+//dependencies {
+//	implementation 'com.google.api-client:google-api-client:2.0.0'
+//	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+//	implementation 'com.google.apis:google-api-services-calendar:v3-rev20220715-2.0.0'
+//}
