--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-src/main/resources/application.yml
-src/main/resources/client_secret.json
+src/main/resources/application.properties
 
 HELP.md
 .gradle
